--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,11 @@
 html, body {
   font-size: 16px;
 }
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1366px;
+  padding: 0 1.5rem;
+}
