flexed nav section of menu

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,10 +2,21 @@ html, body {
   font-size: 16px;
 }
 
+
+
 .menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 1366px;
   padding: 0 1.5rem;
+}
+
+.navigation ul {
+  display: flex;
+  flex-direction: row;
+}
+
+li {
+  padding-right: 1rem;
 }
