--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,27 @@
+/* Universal Styles */
+
 html, body {
   font-size: 16px;
 }
 
+/* Menu section, includes company brand and navigation */
 
+.container {
+    width: 1200;
+}
 
 .menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 1366px;
   padding: 0 1.5rem;
+  height: 100px;
+  border: 1px solid black;
+  align-items: center;
+}
+
+.menu .container {
+  height: 6rem;
 }
 
 .navigation ul {
