--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,8 @@ html, body {
 /* Menu section, includes company brand and navigation */
 
 .container {
-    width: 1200;
+    width: 1200px;
+    align-items: center;
 }
 
 .menu .container {
@@ -46,9 +47,31 @@ li {
 
 /* first section of body */
 
-.everyday .container {
+.main-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.first-section {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  height: 100px;
+  width: 100%;
+}
+
+.banner {
+  width: 60%;
+  height: 20rem;
+  border: 1px solid green;
+}
+
+.banner img {
+  object-fit: cover;
+
+}
+
+.description {
+  width: 40%;
+  border: 1px solid green;
+  display: flex;
+  flex-direction: column;
 }
