--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -60,15 +60,11 @@ li {
   height: 20em;
 }
 
-.banner {
+.banner-img {
   width: 60%;
   border: 1px solid green;
-  object-fit: contain;
 }
 
-.banner-img {
-  height: 20rem;
-}
 
 .banner-img img {
   max-width: 100%;
@@ -107,7 +103,7 @@ li {
 }
 
 .span-container  {
-  width: 20rem;
+  width: 30rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -117,4 +113,42 @@ li {
   margin-bottom: 2rem;
 }
 
-/* first section of body */
+/* second section of body */
+
+/* main wrappers */
+
+.second-section {
+  width: 100%;
+  height: 30rem;
+  border: solid purple 1px;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+}
+
+.practice {
+  width: 60%;
+  border: solid purple 1px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.orientation-wrapper {
+  width: 40%;
+  border: solid purple 1px;
+  height: 100%;
+}
+
+/* second section - left column */
+
+.practice-img {
+  height: 60%;
+  margin: 2rem 1.5rem;
+}
+
+.practice-img img {
+    max-width: 100%;
+    max-height: 100%;
+}
