--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -28,6 +28,9 @@ html, body {
   font-size: 1.5rem;
 }
 
+.colmar {
+}
+
 .navigation ul {
   display: flex;
   flex-direction: row;
@@ -41,4 +44,31 @@ html, body {
   align-items: center;
   justify-content: center;
   padding-right: 1rem;
+}
+
+/* First Section of the Body*/
+
+.container .first-section {
+  display: flex;
+  flex-direction: row;
+}
+
+/* image column 1 of First Section of the Body*/
+
+.first-section .img {
+  width: 60%;
+}
+
+.img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* info column2  of First Section of the Body*/
+
+.first-section .fs-info {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
