--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -51,6 +51,7 @@ html, body {
 .container .first-section {
   display: flex;
   flex-direction: row;
+  background-color: #d6d8d7;
 }
 
 /* image column 1 of First Section of the Body*/
@@ -62,13 +63,25 @@ html, body {
 .img img {
   max-width: 100%;
   max-height: 100%;
+  padding: 2rem 1.5rem;
 }
 
 /* info column2  of First Section of the Body*/
 
 .first-section .fs-info {
   width: 40%;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-left: 1.5rem;
+}
+
+.everyday, .start, .lorem {
+  margin: 0 8rem 1.5rem 1.5rem;
+}
+
+.everyday {
+  font-size: 2.5rem;
+  font-weight: bold;
 }
