--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -54,7 +54,7 @@ html, body {
   background-color: #d6d8d7;
 }
 
-/* image column 1 of First Section of the Body*/
+    /* image column 1 of First Section of the Body*/
 
 .first-section .img {
   width: 60%;
@@ -64,13 +64,15 @@ html, body {
   max-width: 100%;
   max-height: 100%;
   padding: 2rem 1.5rem;
+
 }
 
-/* info column2  of First Section of the Body*/
+    /* info column2  of First Section of the Body*/
 
 .first-section .fs-info {
   width: 40%;
   max-height: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -78,10 +80,37 @@ html, body {
 }
 
 .everyday, .start, .lorem {
+  width: 20rem;
   margin: 0 8rem 1.5rem 1.5rem;
 }
 
 .everyday {
   font-size: 2.5rem;
   font-weight: bold;
+}
+
+.start {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #464948;
+  color: white;
+  padding: .5rem 0;
+}
+
+/* Second Section of the Body*/
+
+.container .second-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.ss-column1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.ss-column2 {
+  display: flex;
+  flex-direction: column;
 }
