--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -5,9 +5,7 @@ html, body {
 }
 
 .container {
-  width: 1200px;
   margin: 0 auto;
-  border: 1px solid green;
 }
 
 /* Menu section, includes company brand and navigation */
@@ -103,14 +101,70 @@ html, body {
 .container .second-section {
   display: flex;
   flex-direction: row;
+
 }
+
+/* Column One - Second Section of the Body*/
 
 .ss-column1 {
   display: flex;
   flex-direction: column;
+  width: 60%;
 }
+
+.hurt, .curabitur, .emmanuel {
+  padding-left: 1.5rem;
+}
+
+.hurt {
+  font-size: 2rem;
+  font-weight: bold;
+  padding-bottom: 1.5rem;
+}
+
+.curabitur {
+  padding-bottom: 1.5rem;
+}
+
+.emmanuel {
+padding-bottom: 2rem;
+}
+
+  /* Column Two - Second Section of the Body*/
 
 .ss-column2 {
   display: flex;
   flex-direction: column;
+  width: 40%;
+  margin-left: 1.5rem;
+}
+
+.minic2-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.minic2-wrapper .img {
+  height: auto;
+  width: 35%
+}
+
+.minic2-wrapper .mc2w {
+  width: 65%
+}
+
+.mc2w {
+  margin-left: 2.5rem;
+}
+
+.title, .info, .read-more {
+  padding-bottom: .5rem;
+}
+.title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.read-more {
+  color: blue;
 }
