--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -185,6 +185,8 @@ padding-bottom: 2rem;
   font-size: 2rem;
 }
 
+/* Section Three - Body*/
+
 .container .third-section {
   display: flex;
   flex-direction: column;
@@ -203,4 +205,15 @@ padding-bottom: 2rem;
 .mini-wrappers3 {
   width: 33%;
   margin-right: 1.5rem;
+}
+
+/* Section Four*/
+
+.container .fourth-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.column-one {
+  width: 60%;
 }
