--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -224,14 +224,22 @@ padding-bottom: 2rem;
 
 .column-one video {
   width: 100%;
+  padding-bottom: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .column-one .title .curabitur  {
   width: 100%;
   }
 
+  .column-one .title {
+    padding-bottom: .5rem;
+    margin-left: 1.5rem;
+  }
 
-
+  .column-one .curabitur {
+    padding-bottom: 2rem;
+  }
 
 /* Section Four column 2*/
 
