--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -177,7 +177,7 @@ padding-bottom: 2rem;
 
 /* Section Three - header*/
 
-.container .header  {
+.container .header2  {
   display: flex;
   align-items: center;
   justify-content: center;
