--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -286,3 +286,11 @@ padding-bottom: 2rem;
 .minic2-wrapper-white .mc2w {
   width: 60%;
 }
+
+/* footer */
+
+footer {
+  margin-left: 1.5rem;
+  margin-top: 1rem;
+  height: 5rem;
+}
