--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -101,6 +101,7 @@ html, body {
 .container .second-section {
   display: flex;
   flex-direction: row;
+  margin-bottom: 2rem;
 }
 
 /* Column One - Second Section of the Body*/
@@ -191,7 +192,7 @@ padding-bottom: 2rem;
 .container .third-section {
   display: flex;
   flex-direction: column;
-  background-color: #dce8ef;
+  background-color: #e8e8e8;
 }
 
 .row-one {
@@ -291,6 +292,7 @@ padding-bottom: 2rem;
 
 footer {
   margin-left: 1.5rem;
-  margin-top: 1rem;
+  padding-top: 1rem;
   height: 5rem;
+  border-top: 1px solid #e8e8e8;
 }
