--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -26,7 +26,8 @@ html, body {
   font-size: 1.5rem;
 }
 
-.colmar {
+.ss-column1, .first-section .img {
+  padding: 2rem 1.5rem;
 }
 
 .navigation ul {
@@ -61,8 +62,6 @@ html, body {
 .img img {
   max-width: 100%;
   max-height: 100%;
-  padding: 2rem 1.5rem;
-
 }
 
     /* info column2  of First Section of the Body*/
@@ -233,7 +232,7 @@ padding-bottom: 2rem;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 
