--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -59,10 +59,6 @@ html, body {
   width: 60%;
 }
 
-.img img {
-  max-width: 100%;
-  max-height: 100%;
-}
 
     /* info column2  of First Section of the Body*/
 
@@ -111,14 +107,10 @@ html, body {
   width: 60%;
 }
 
-.hurt, .curabitur, .emmanuel {
-  padding-left: 1.5rem;
-}
-
 .hurt {
   font-size: 2rem;
   font-weight: bold;
-  padding-bottom: 1.5rem;
+  padding: 1.5rem 0rem;
 }
 
 .curabitur {
