--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -27,7 +27,7 @@ html, body {
 }
 
 .ss-column1, .first-section .img {
-  padding: 2rem 1.5rem;
+  padding: 0rem 1.5rem 2rem 1.5rem;
 }
 
 .navigation ul {
@@ -96,7 +96,7 @@ html, body {
 .container .second-section {
   display: flex;
   flex-direction: row;
-  margin-bottom: 2rem;
+  margin: 2rem 0rem;
 }
 
 /* Column One - Second Section of the Body*/
@@ -134,14 +134,16 @@ padding-bottom: 2rem;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: .0rem .5rem .5rem .5rem;
 }
 
 .minic2-wrapper .img {
   height: auto;
-  width: 35%
+  width: 35%;
 }
 
 .minic2-wrapper .mc2w {
+  height: auto;
   width: 65%
 }
 
