updated section three header to have colored background and centered

--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -183,6 +183,7 @@ padding-bottom: 2rem;
   padding: 2rem 0;
   font-weight: bold;
   font-size: 2rem;
+  background-color: #e8e8e8;
 }
 
 /* Section Three - Body*/
