updated text color in section three to be darker

--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -207,11 +207,11 @@ padding-bottom: 2rem;
 
 .ti .courses {
   padding: .5rem 0rem;
-  color: #d6d8d7;
+  color: #b9b9b9;
 }
 
 .ti .info {
-  color: #d6d8d7;
+  color: #b9b9b9;
 }
 
 .mini-wrappers3 .img {
