--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -258,6 +258,10 @@ padding-bottom: 2rem;
   padding: .5rem;
 }
 
+.curabitur {
+  margin-left: 1.5rem;
+}
+
 /* Section Four column 1 */
 
 .column-one {
@@ -324,8 +328,11 @@ padding-bottom: 2rem;
 /* footer */
 
 footer {
-  margin-left: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  margin: 0rem 1.5rem;
   padding-top: 1rem;
   height: 5rem;
   border-top: 1px solid #e8e8e8;
+  color: #87878d;
 }
