added top padding to navigation to center li's

--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -39,6 +39,7 @@ html, body {
   align-items: center;
   justify-content: center;
   padding-right: 1rem;
+  padding-top: .5rem;
 }
 
 /* First Section of the Body*/
