add responsive design to section 4, removed all but video

--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -352,6 +352,8 @@ padding-bottom: 2rem;
   object-fit: cover;
 }
 
+/* mobile Responsive - section three */
+
 @media only screen
     and (max-width: 400px) {
 
@@ -485,6 +487,18 @@ padding-bottom: 2rem;
   width: 60%;
 }
 
+/* mobile Responsive - section four */
+
+@media only screen
+    and (max-width: 400px) {
+      .column-two, .title, .curabitur {
+        display: none;
+      }
+
+      .column-one video {
+        margin: 0rem 0rem 2rem 0rem;
+      }
+  }
 /* footer */
 
 footer {
