--- a/resources/css/styletwo.css
+++ b/resources/css/styletwo.css
@@ -50,7 +50,7 @@ html, body {
 }
 
 @media only screen
-    and (max-width: 480px) {
+    and (max-width: 400px) {
 
       .mobile-header {
         display: flex;
@@ -144,6 +144,7 @@ html, body {
     .start {
       margin-bottom: 2rem;
     }
+
   }
 
 /* Second Section of the Body*/
@@ -281,7 +282,7 @@ padding-bottom: 2rem;
       background-color: white;
     }
 
-    .img img {
+    .second-section .img img {
       display: none;
     }
 
@@ -390,6 +391,9 @@ padding-bottom: 2rem;
       display: none;
     }
 
+    .third-section .img {
+      display: none;
+    }
     .third-section .title {
       padding: 1rem 0rem 1.5rem 1rem;
     }
